# csm-offline-computation

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: development_task.yaml
.github/workflows/: docker-image.yml  test.yaml
output/: csm_offline_output_human_left.surf.gii  csm_offline_output_human_right.surf.gii  csm_offline_output_macaque_left.surf.gii  csm_offline_output_macaque_right.surf.gii  csm_offline_output_neuroquery_studies.json  csm_offline_output_neuroquery_terms.json  csm_offline_output_similarity_human.npy  csm_offline_output_similarity_macaque.npy
src/csm_offline/: __main__.py  algorithms.py  cli.py  config.py  image_search.py  io.py  workbench.py
tests/: conftest.py  test_cli.py  test_config.py  test_fibonacci.py  test_image_search.py  test_io.py  test_workbench.py
